force-app/main/default/objects/Grant_Other_Funders__c/Grant_Other_Funders__c.object-meta.xml
<CustomObject>
    <description>This object is used to identify other organizations that also funded the program that the applicant has asked Sentara to fund.</description>
    <label>Grant Other Funders</label>
    <nameField>
        <displayFormat>GOF-{0000}</displayFormat>
        <label>Grant Other Funders Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Funders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>