force-app/main/default/objects/Grant_Other_Funders__c/fields/Funder_Name__c.field-meta.xml
<CustomField>
    <fullName>Funder_Name__c</fullName>
    <label>Funder Name</label>
    <type>TextArea</type>
</CustomField>