force-app/main/default/objects/Grant_Other_Funders__c/fields/Funding_From__c.field-meta.xml
<CustomField>
    <fullName>Funding_From__c</fullName>
    <label>Funding From</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Funding_Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sentara Corporate</fullName>
            </value>
            <value>
                <fullName>Sentara Hospital</fullName>
            </value>
            <value>
                <fullName>Optima Health</fullName>
            </value>
            <value>
                <fullName>Virginia Premier</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>