force-app/main/default/objects/Grant_Other_Funders__c/fields/Funding_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Funding_Project_Name__c</fullName>
    <description>Project Name funded by other sources</description>
    <label>Funding Project Name</label>
    <type>TextArea</type>
</CustomField>