force-app/main/default/objects/Grant_Other_Funders__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <label>Funding Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sentara</fullName>
            </value>
            <value>
                <fullName>Sentara Artifacts</fullName>
            </value>
            <value>
                <fullName>Other Funding Source</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>