force-app/main/default/objects/Grant_Other_Funders__c/fields/Funding_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Funding_Start_Date__c</fullName>
    <description>Start date of the other funding source</description>
    <label>Funding Start Date</label>
    <type>Date</type>
</CustomField>