force-app/main/default/objects/Grant_Other_Funders__c/fields/Prior_Year_Fund_Source__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Fund_Source__c</fullName>
    <label>Prior Year Fund Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>