force-app/main/default/objects/Grant_Other_Funders__c/fields/rowIndex__c.field-meta.xml
<CustomField>
    <fullName>rowIndex__c</fullName>
    <label>rowIndex</label>
    <length>83</length>
    <type>Text</type>
</CustomField>