force-app/main/default/objects/Grant_Other_Funders__c/fields/SFx_GrantFunders_Id__c.field-meta.xml
<CustomField>
    <fullName>SFx_GrantFunders_Id__c</fullName>
    <externalId>true</externalId>
    <label>SFx_GrantFunders_Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>